--- a/blogger/Gemfile
+++ b/blogger/Gemfile
@@ -29,6 +29,9 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use Unicorn as the app server
 # gem 'unicorn'
 
+# Use Paperclip gem
+gem 'paperclip', '~> 4.3', '>= 4.3.6'
+
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
