--- a/blogger/Gemfile
+++ b/blogger/Gemfile
@@ -32,6 +32,10 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use Paperclip gem
 gem 'paperclip', '~> 4.3', '>= 4.3.6'
 
+# Use Sorcery authentication
+gem 'sorcery'
+
+
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
